--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -1,4 +1,5 @@
-server {
+server
+{
 
   listen 8080;
   # listen 443 ssl
@@ -8,12 +9,12 @@ server {
 
   # lua_ssl_verify_depth 2;
   # lua_ssl_trusted_certificate /etc/nginx/certs/ngxCert.crt;
-
   set $NGINX_LOGINREQUIRED 'true';
 
   set $session_name nginx_session;
 
-  location ~ (/content|/css|/Data|/db-scripts|/fonts|/gfx|/images|/js|/reactapp|/swf)$ {
+  location ~ (/content|/css|/Data|/db-scripts|/fonts|/gfx|/images|/js|/reactapp|/swf)$
+  {
 
     sendfile on;
     sendfile_max_chunk 5m;
@@ -25,7 +26,8 @@ server {
 
   client_max_body_size 0;
 
-  location / {
+  location /
+  {
 
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
@@ -38,20 +40,24 @@ server {
 
   }
 
-  location /mtb {
+  location /mtb
+  {
 
     set $apply_login 'true';
 
-    if ($request_method = GET) {
-        set $apply_login 'false';
+    if ($request_method = GET)
+    {
+      set $apply_login 'false';
     }
 
-    if ($NGINX_LOGINREQUIRED = 'false') { 
-        set $apply_login 'false';
+    if ($NGINX_LOGINREQUIRED = 'false')
+    {
+      set $apply_login 'false';
     }
 
-    if ($apply_login = 'true') { 
-        include /etc/nginx/conf.d/lua_auth_config.lua;
+    if ($apply_login = 'true')
+    {
+      include /etc/nginx/conf.d/lua_auth_config.lua;
     }
 
     proxy_headers_hash_max_size 512;
@@ -64,44 +70,53 @@ server {
     proxy_pass http://fhirspark:3001;
 
 
-
-    location ~* /mtb/(.+)/permission {
-          if ($NGINX_LOGINREQUIRED = 'true') { 
-              include /etc/nginx/conf.d/lua_auth_config.lua;
-          }
-          #add_header Access-Control-Allow-Origin '*';
-          add_header Cache-Control 'no-cache, no-store, max-age=0';
-          add_header Pragma 'no-cache';
-          proxy_pass http://fhirspark:3001;
-    }	
-
-    location /mtb/login {
-          default_type 'text/html';
-          if ($NGINX_LOGINREQUIRED = 'true') { 
-              include /etc/nginx/conf.d/lua_auth_config.lua;
-          }
-          include /etc/nginx/conf.d/lua_login_config.lua;
-    }
-	
-    location /mtb/logout {
-        if ($NGINX_LOGINREQUIRED = 'true') { 
-            include /etc/nginx/conf.d/lua_auth_config.lua;
-        }
+    location ~* /mtb/(.+)/permission
+    {
+      if ($NGINX_LOGINREQUIRED = 'true')
+      {
+        include /etc/nginx/conf.d/lua_auth_config.lua;
+      }
+      #add_header Access-Control-Allow-Origin '*';
+      add_header Cache-Control 'no-cache, no-store, max-age=0';
+      add_header Pragma 'no-cache';
+      proxy_pass http://fhirspark:3001;
     }
 
-    location /mtb/redirect {
-        if ($NGINX_LOGINREQUIRED = 'true') { 
-            include /etc/nginx/conf.d/lua_auth_config.lua;
-        }
+    location /mtb/login
+    {
+      default_type 'text/html';
+      if ($NGINX_LOGINREQUIRED = 'true')
+      {
+        include /etc/nginx/conf.d/lua_auth_config.lua;
+      }
+      include /etc/nginx/conf.d/lua_login_config.lua;
+    }
+
+    location /mtb/logout
+    {
+      if ($NGINX_LOGINREQUIRED = 'true')
+      {
+        include /etc/nginx/conf.d/lua_auth_config.lua;
+      }
+    }
+
+    location /mtb/redirect
+    {
+      if ($NGINX_LOGINREQUIRED = 'true')
+      {
+        include /etc/nginx/conf.d/lua_auth_config.lua;
+      }
     }
 
   }
 
-  location /fhir {
+  location /fhir
+  {
 
-        if ($NGINX_LOGINREQUIRED = 'true') { 
-            include /etc/nginx/conf.d/lua_auth_config.lua;
-        }					   
+    if ($NGINX_LOGINREQUIRED = 'true')
+    {
+      include /etc/nginx/conf.d/lua_auth_config.lua;
+    }
 
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
@@ -114,7 +129,8 @@ server {
 
   }
 
-  location /genome-nexus {
+  location /genome-nexus
+  {
 
     resolver 127.0.0.11;
 
@@ -130,15 +146,16 @@ server {
 
   }
 
-  location /auth {
+  location /auth
+  {
 
-    proxy_set_header Host               $http_host;
-    proxy_set_header X-Real-IP          $remote_addr;
-    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host   $host;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Server $host;
-    proxy_set_header X-Forwarded-Port   $server_port;
-    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Proto $scheme;
 
     set_by_lua $keycloak 'return os.getenv("KEYCLOAK_URL")';
 
@@ -147,7 +164,8 @@ server {
 
   error_page 500 502 503 504 /50x.html;
 
-  location = /50x.html {
+  location = /50x.html
+  {
 
     root /usr/share/nginx/html;
 
