Fix hapi version by adding the leading v

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -110,7 +110,7 @@ services:
       - cbioportal_net
   hapiserver:
     restart: unless-stopped
-    image: hapiproject/hapi:5.2.1
+    image: hapiproject/hapi:v5.2.1
     container_name: cbioportal_fhirspark_hapiserver
     ports:
       - "8082:8080"
