set loginrequired using lua

--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -9,7 +9,8 @@ server
 
   # lua_ssl_verify_depth 2;
   # lua_ssl_trusted_certificate /etc/nginx/certs/ngxCert.crt;
-  set $NGINX_LOGINREQUIRED 'true';
+  set_by_lua $NGINX_LOGINREQUIRED 'return os.getenv("NGINX_LOGINREQUIRED")';
+
 
   set $session_name nginx_session;
 
