--- a/services/cbioproxy/nginx.conf
+++ b/services/cbioproxy/nginx.conf
@@ -28,6 +28,7 @@ env KEYCLOAK_REALM;
 env KEYCLOAK_CLIENT;
 env KEYCLOAK_SECRET;
 env CBIOPORTAL_URL;
+env NGINX_LOGINREQUIRED;
 
 
 error_log logs/error.log;
