Use ensembl-mysql image from docker hub

--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -139,8 +139,7 @@ services:
     depends_on:
       - ensembl-mysql
   ensembl-mysql:
-    build:
-      context: services/ensembl-mysql
+    image: nr205/ensembl-mysql:latest
     restart: unless-stopped
     networks:
       - cbioportal_net
