--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -202,9 +202,7 @@ services:
     depends_on:
       - ensembl-mysql
   ensembl-mysql:
-    image: harbor.miracum.org/cbioportal/ensembl-mysql
-    build:
-      context: services/ensembl-mysql
+    image: nr205/ensembl-mysql:latest
     restart: unless-stopped
     networks:
       - cbioportal_net
