--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -132,7 +132,7 @@ services:
     networks:
       - cbioportal_net
   ensembl-rest:
-    image: ghcr.io/buschlab/ensembl-rest:${RELEASE:-latest}
+    image: nr205/ensembl-rest:${RELEASE:-latest}
     restart: unless-stopped
     volumes:
       - ./config/ensembl_rest.conf:/opt/vep/src/ensembl-rest/ensembl_rest.conf
