use local dns resolver

--- a/services/cbioproxy/nginx.conf
+++ b/services/cbioproxy/nginx.conf
@@ -48,7 +48,7 @@ events
 http
 {
   lua_package_path '~/lua/?.lua;;';
-  resolver 8.8.8.8;
+  resolver local=on;
   # cache for discovery metadata documents
   lua_shared_dict discorvery 1m;
   # cache for JWKs
