--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,5 @@
   "extends": [
     "config:base"
   ],
-  "ignoreDeps": ["cbioportal/cbioportal"]
+  "ignoreDeps": ["cbioportal/cbioportal", "mongo"]
 }
