add logo config

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ POSTGRES_USER_PASSWORD=P@ssword2
 
 # cBioPortal configuration
 
+# logo shown in upper right corner; place in config dir
+LOGO=miracum.png
+
 # If you enter an OncoKB Token uncomment the following line
 #ONCOKB_URL=https://www.oncokb.org/api/v1
 #ONCOKB_TOKEN=
