--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,6 +16,7 @@ services:
      - ./config/client-tailored-saml-idp-metadata.xml:/cbioportal-webapp/WEB-INF/classes/client-tailored-saml-idp-metadata.xml
      - ./config/samlKeystore.jks:/cbioportal-webapp/WEB-INF/classes/samlKeystore.jks
      - ./config/frontend.json:/cbioportal/frontend.json:ro
+     - ./config/${LOGO:-miracum.png}:/cbioportal-webapp/images/${LOGO:-miracum.png}
     depends_on:
      - cbioportal_database
      - cbioportal_session
@@ -53,6 +54,7 @@ services:
       "-Dhttps.proxyHost=${HTTPS_PROXY_HOST}",
       "-Dhttps.proxyPort=${HTTPS_PROXY_PORT}",
       "-Dfrontend.config=/cbioportal/frontend.json",
+      "-Dskin.right_logo=${LOGO:-miracum.png}",
       "-jar",
       "/webapp-runner.jar",
       "-AmaxHttpHeaderSize=16384",
