--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -25,6 +25,25 @@ server
 
   }
 
+  location ~ ^/reports/(.+)/(.+)/(.+)$
+  {
+
+    set $study $1;
+    set $patient $2;
+
+    if ($NGINX_LOGINREQUIRED = 'true')
+    {
+      include /etc/nginx/conf.d/lua_resource_config.lua;
+    }
+
+    sendfile on;
+    sendfile_max_chunk 5m;
+    tcp_nopush on;
+    tcp_nodelay on;
+    root /usr/share;
+
+  }
+
   client_max_body_size 0;
 
   location /
