--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -94,6 +94,11 @@ services:
     restart: unless-stopped
     image: ghcr.io/buschlab/cbioproxy:${RELEASE:-latest}
     container_name: cbioportal_nginx_container
+    volumes:
+      - ./services/cbioproxy/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
+      - ./services/cbioproxy/cbioportal.conf:/etc/nginx/conf.d/cbioportal.conf
+      - ./services/cbioproxy/lua_resource_config.lua:/etc/nginx/conf.d/lua_resource_config.lua
+      - ./reports:/usr/share/reports
     ports:
       - "${PORT:-8080}:8080"
     depends_on:
