--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -94,6 +94,9 @@ services:
     restart: unless-stopped
     image: ghcr.io/buschlab/cbioproxy:${RELEASE:-latest}
     container_name: cbioportal_nginx_container
+    volumes:
+      - ./services/cbioproxy/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
+      - ./services/cbioproxy/cbioportal-research.conf:/etc/nginx/conf.d/cbioportal.conf
     ports:
       - "${PORT:-8080}:8080"
     depends_on:
