--- a/services/cbioproxy/cbioportal-research.conf
+++ b/services/cbioproxy/cbioportal-research.conf
@@ -9,6 +9,7 @@ server
 
   # lua_ssl_verify_depth 2;
   # lua_ssl_trusted_certificate /etc/nginx/certs/ngxCert.crt;
+  set_by_lua $NGINX_LOGINREQUIRED 'return os.getenv("NGINX_LOGINREQUIRED")';
 
   set $session_name nginx_session;
 
@@ -20,6 +21,25 @@ server
     tcp_nopush on;
     tcp_nodelay on;
     root /usr/share/nginx/html;
+
+  }
+
+  location ~ ^/reports/(.+)/(.+)/(.+)$
+  {
+
+    set $study $1;
+    set $patient $2;
+
+    if ($NGINX_LOGINREQUIRED = 'true')
+    {
+      include /etc/nginx/conf.d/lua_resource_config.lua;
+    }
+
+    sendfile on;
+    sendfile_max_chunk 5m;
+    tcp_nopush on;
+    tcp_nodelay on;
+    root /usr/share;
 
   }
 
