--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -213,6 +213,9 @@ services:
       "-Dspring.data.mongodb.uri=mongodb://genomenexus_db:27017/annotator",
       "-Dvep.url=http://ensembl-rest:3000/vep/human/hgvs/VARIANT?content-type=application/json&xref_refseq=1&ccds=1&canonical=1&domains=1&hgvs=1&numbers=1&protein=1",
       "-Dgenexrefs.url=http://ensembl-rest:3000/xrefs/id/ACCESSION?content-type=application/json",
+      "-Densembl.sequence.url=http://localhost:3000/sequence/region/human/QUERY?content-type=application/json",
+      "-DmutationAssessor.url=http://127.0.0.1/VARIANT&frm=json&fts=input,rgaa,rgvt,msa,pdb,F_impact,F_score,vc_score,vs_score,info,var,gene,uprot,rsprot,gaps,msa_height,chr,rs_pos,rs_res,up_pos,up_res,cnt_cosmic,cnt_snps",
+      "-Dmyvariantinfo.url=http://127.0.0.1/VARIANT",
       "-jar",
       "/app/genome-nexus.war"
     ]
