fix nginx build

--- a/services/cbioproxy/Dockerfile
+++ b/services/cbioproxy/Dockerfile
@@ -1,6 +1,7 @@
 FROM ghcr.io/buschlab/cbioportal:${RELEASE:-latest} as static
 
 FROM openresty/openresty:alpine-fat
+RUN apk update && apk add git
 COPY --from=static /cbioportal-webapp /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf \
     && /usr/local/openresty/luajit/bin/luarocks install lua-resty-openidc
