--- a/services/cbioproxy/Dockerfile
+++ b/services/cbioproxy/Dockerfile
@@ -1,6 +1,6 @@
 FROM ghcr.io/buschlab/cbioportal:${RELEASE:-latest} as static
 
-FROM openresty/openresty:alpine-fat
+FROM openresty/openresty:1.19.9.1-3-alpine-fat
 RUN apk update && apk add git
 COPY --from=static /cbioportal-webapp /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf \
