--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -14,6 +14,17 @@ server
 
   set $session_name nginx_session;
 
+  location /attributes.json
+  {
+
+    sendfile on;
+    sendfile_max_chunk 5m;
+    tcp_nopush on;
+    tcp_nodelay on;
+    root /;
+
+  }
+
   location ~ (/content|/css|/Data|/db-scripts|/fonts|/gfx|/images|/js|/reactapp|/swf)$
   {
 
