--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
      - cbioportal_portalinfo:/cbioportal/portalinfo
     depends_on:
      - cbioportal_database
-     - cbioportal_session
+     - cbioportal-session
     networks:
      - cbioportal_net
     command: [ 
@@ -30,7 +30,7 @@ services:
       "-Doncokb.token=${ONCOKB_TOKEN}",
       "-Dgenomenexus.url=/genome-nexus",
       "-Dauthenticate=${AUTHENTICATE:-noauthsessionservice}",
-      "-Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/",
+      "-Dsession.service.url=http://cbioportal-session:5000/api/sessions/my-portal/",
       "-Dshow.civic=${ENABLE_CIVIC:-true}",
       "-Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-false}",
       "-Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true}",
@@ -79,18 +79,18 @@ services:
      - --collation-server=latin1_swedish_ci
     networks:
      - cbioportal_net
-  cbioportal_session:
+  cbioportal-session:
     restart: unless-stopped
     image: cbioportal/session-service:0.5.0
     container_name: cbioportal_session_container
     environment:
       SERVER_PORT: 5000
-      JAVA_OPTS: -Dspring.data.mongodb.uri=mongodb://cbioportal_session_database:27017/session-service
+      JAVA_OPTS: -Dspring.data.mongodb.uri=mongodb://cbioportal-session-database:27017/session-service
     depends_on:
-      - cbioportal_session_database
+      - cbioportal-session-database
     networks:
       - cbioportal_net
-  cbioportal_session_database:
+  cbioportal-session-database:
     restart: unless-stopped
     image: mongo:3.7.9
     container_name: cbioportal_session_database_container
