--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -98,12 +98,12 @@ services:
       - cbioportal_session_data:/data/db
     networks:
       - cbioportal_net
-  nginx:
+  cbioproxy:
     restart: unless-stopped
     image: ghcr.io/buschlab/cbioproxy:${RELEASE:-latest}
     environment:
       NGINX_LOGINREQUIRED: ${LOGINREQUIRED:-false}
-    container_name: cbioportal_nginx_container
+    container_name: cbioproxy_container
     volumes:
       - ./services/cbioproxy/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
       - ./services/cbioproxy/cbioportal-research.conf:/etc/nginx/conf.d/cbioportal.conf
