--- a/.github/workflows/docker-build-research.yml
+++ b/.github/workflows/docker-build-research.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Build research containers
         run: docker-compose -f docker-compose-research.yml build cbioportal
       - name: Build research cbioproxy
-        run: docker-compose -f docker-compose-research.yml build nginx
+        run: docker-compose -f docker-compose-research.yml build cbioproxy
