--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -60,6 +60,11 @@ server
   location /
   {
 
+    if ($NGINX_LOGINREQUIRED = 'true')
+    {
+      include /etc/nginx/conf.d/lua_auth_config.lua;
+    }
+
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
