--- a/.github/workflows/docker-build-dev.yml
+++ b/.github/workflows/docker-build-dev.yml
@@ -14,3 +14,12 @@ jobs:
         run: docker-compose -f docker-compose-dev.yml build cbioportal
       - name: Build dev cbioproxy
         run: docker-compose -f docker-compose-dev.yml build cbioproxy
+      - name: Login to Docker registry
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        run: echo ${{ secrets.TOKEN }} | docker login -u ${{ secrets.USER }} --password-stdin ${{ secrets.DOCKER_URL }}
+      - name: Push cbioportal
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        run: docker-compose -f docker-compose-dev.yml push cbioportal
+      - name: Push cbioproxy
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        run: docker-compose -f docker-compose-dev.yml push cbioproxy
