--- a/.github/workflows/docker-build-dev.yml
+++ b/.github/workflows/docker-build-dev.yml
@@ -16,7 +16,11 @@ jobs:
         run: docker-compose -f docker-compose-dev.yml build cbioproxy
       - name: Login to Docker registry
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: echo ${{ secrets.TOKEN }} | docker login -u ${{ secrets.USER }} --password-stdin ${{ secrets.DOCKER_URL }}
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push cbioportal
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         run: docker-compose -f docker-compose-dev.yml push cbioportal
