--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -109,6 +109,7 @@ services:
       - ./services/cbioproxy/cbioportal-research.conf:/etc/nginx/conf.d/cbioportal.conf
       - ./services/cbioproxy/lua_resource_config.lua:/etc/nginx/conf.d/lua_resource_config.lua
       - ./reports:/usr/share/reports
+      - ./config/certs:/certs
     ports:
       - "${PORT:-8080}:8080"
     depends_on:
