--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -25,6 +25,21 @@ server
 
   }
 
+    location /tumorTypes.json
+  {
+
+    if ($http_origin ~* "^http://localhost:3000$") {
+      add_header Access-Control-Allow-Origin "$http_origin";
+    }
+
+    sendfile on;
+    sendfile_max_chunk 5m;
+    tcp_nopush on;
+    tcp_nodelay on;
+    root /;
+
+  }
+
   location ~ (/content|/css|/Data|/db-scripts|/fonts|/gfx|/images|/js|/reactapp|/swf)$
   {
 
