remove auth prefix for keycloak

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       "-Dsaml.sp.metadata.entityid=cbioportal",
       "-Dsaml.sp.metadata.entitybaseurl=${CBIOPORTAL_URL}",
       "-Dsaml.idp.metadata.location=classpath:/client-tailored-saml-idp-metadata.xml",
-      "-Dsaml.idp.metadata.entityid=${KEYCLOAK_URL}/auth/realms/${KEYCLOAK_REALM}",
+      "-Dsaml.idp.metadata.entityid=${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM}",
       "-Dsaml.keystore.location=classpath:/samlKeystore.jks",
       "-Dsaml.keystore.private-key.key=${KEYSTORE_KEY}",
       "-Dsaml.keystore.password=${KEYSTORE_PASSWORD}",
