--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Release version e.g. 2021q4 or simply latest
-RELEASE=latest
+# Release version e.g. 2022q2 or simply latest
+RELEASE=2022q2
 
 # Network configuration
 PORT=8080
