--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
       NO_PROXY: "cbioportal,cbioportal_session"
       DB_PASSWORD: ${MYSQL_USER_PASSWORD:-P@ssword1}
     volumes:
-     - ./study:/study/
-     - ./config/portal.properties:/cbioportal/portal.properties:ro
-     - ./config/client-tailored-saml-idp-metadata.xml:/cbioportal-webapp/WEB-INF/classes/client-tailored-saml-idp-metadata.xml
-     - ./config/samlKeystore.jks:/cbioportal-webapp/WEB-INF/classes/samlKeystore.jks
-     - ./config/frontend.json:/cbioportal/frontend.json:ro
-     - ./config/${LOGO:-miracum.png}:/cbioportal-webapp/images/${LOGO:-miracum.png}
-     - cbioportal_portalinfo:/cbioportal/portalinfo
+     - ./study:/study/:z
+     - ./config/portal.properties:/cbioportal/portal.properties:Z
+     - ./config/client-tailored-saml-idp-metadata.xml:/cbioportal-webapp/WEB-INF/classes/client-tailored-saml-idp-metadata.xml:Z
+     - ./config/samlKeystore.jks:/cbioportal-webapp/WEB-INF/classes/samlKeystore.jks:Z
+     - ./config/frontend.json:/cbioportal/frontend.json:Z
+     - ./config/${LOGO:-miracum.png}:/cbioportal-webapp/images/${LOGO:-miracum.png}:Z
+     - cbioportal_portalinfo:/cbioportal/portalinfo:z
     depends_on:
      - cbioportal_database
      - cbioportal-session
@@ -70,9 +70,9 @@ services:
       MYSQL_USER: cbio
       MYSQL_PASSWORD: ${MYSQL_USER_PASSWORD:-P@ssword1}
     volumes:
-     - ./data/cgds.sql:/docker-entrypoint-initdb.d/cgds.sql:ro
-     - ./data/seed-cbioportal_hg19_v2.12.8.sql.gz:/docker-entrypoint-initdb.d/seed.sql.gz:ro
-     - ./data/tableExtension.sql:/docker-entrypoint-initdb.d/tableExtension.sql:ro
+     - ./data/cgds.sql:/docker-entrypoint-initdb.d/cgds.sql:Z
+     - ./data/seed-cbioportal_hg19_v2.12.8.sql.gz:/docker-entrypoint-initdb.d/seed.sql.gz:Z
+     - ./data/tableExtension.sql:/docker-entrypoint-initdb.d/tableExtension.sql:Z
      - cbioportal_data:/var/lib/mysql
     command:
      - --character-set-server=latin1
@@ -111,8 +111,8 @@ services:
       FHIRSPARK_PORTALURL: http://cbioportal:8080/
       FHIRSPARK_LOGINREQUIRED: ${LOGINREQUIRED:-false}
     volumes:
-      - ./data/drugs.json:/drugs.json:ro
-      - ./data/hgnc.csv:/hgnc.csv:ro
+      - ./data/drugs.json:/drugs.json:Z
+      - ./data/hgnc.csv:/hgnc.csv:Z
     networks:
       - cbioportal_net
   hapiserver:
@@ -150,15 +150,15 @@ services:
     image: ghcr.io/buschlab/cbioproxy:${RELEASE:-latest}
     container_name: cbioproxy_container
     volumes:
-      - ./services/cbioproxy/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
-      - ./services/cbioproxy/cbioportal.conf:/etc/nginx/conf.d/cbioportal.conf
-      - ./services/cbioproxy/lua_auth_config.lua:/etc/nginx/conf.d/lua_auth_config.lua
-      - ./services/cbioproxy/lua_login_config.lua:/etc/nginx/conf.d/lua_login_config.lua
-      - ./services/cbioproxy/lua_resource_config.lua:/etc/nginx/conf.d/lua_resource_config.lua
-      - ./reports:/usr/share/reports
-      - ./config/attributes.json:/attributes.json
-      - ./data/tumorTypes.json:/tumorTypes.json
-      - ./config/certs:/certs
+      - ./services/cbioproxy/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf:Z
+      - ./services/cbioproxy/cbioportal.conf:/etc/nginx/conf.d/cbioportal.conf:Z
+      - ./services/cbioproxy/lua_auth_config.lua:/etc/nginx/conf.d/lua_auth_config.lua:Z
+      - ./services/cbioproxy/lua_login_config.lua:/etc/nginx/conf.d/lua_login_config.lua:Z
+      - ./services/cbioproxy/lua_resource_config.lua:/etc/nginx/conf.d/lua_resource_config.lua:Z
+      - ./reports:/usr/share/reports:Z
+      - ./config/attributes.json:/attributes.json:Z
+      - ./data/tumorTypes.json:/tumorTypes.json:Z
+      - ./config/certs:/certs:z
     environment:
       NGINX_LOGINREQUIRED: ${LOGINREQUIRED:-false}
       KEYCLOAK_URL: ${KEYCLOAK_URL:-//localhost:8080}
@@ -210,7 +210,7 @@ services:
     image: docker.io/nr205/ensembl-rest:109
     restart: unless-stopped
     volumes:
-      - ./config/ensembl_rest.conf:/opt/vep/src/ensembl-rest/ensembl_rest.conf
+      - ./config/ensembl_rest.conf:/opt/vep/src/ensembl-rest/ensembl_rest.conf:Z
     networks:
       - cbioportal_net
     depends_on:
