--- a/init.yml
+++ b/init.yml
@@ -8,8 +8,8 @@ services:
     environment:
       MYSQL_USER_PASSWORD: ${MYSQL_USER_PASSWORD:-P@ssword1}
     volumes:
-     - ./data:/data/
-     - ./config/:/config/
-     - ./init.sh:/init.sh:ro
+     - ./data:/data/:z
+     - ./config/:/config/:z
+     - ./init.sh:/init.sh:z
     command: /bin/sh -c "cd / && /init.sh"
     entrypoint: []
