Upgrade genome-nexus

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -225,7 +225,7 @@ services:
     networks:
       - cbioportal_net
   genomenexus_db:
-    image: ghcr.io/buschlab/genome-nexus-db:${RELEASE:-latest}
+    image: docker.io/genomenexus/gn-mongo:0.31_mutationassessor
     ports:
       - "27018:27017"
     volumes:
