update to cbioportal 6.0.0

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PORT=8080
 # MySQL configuration
 MYSQL_ROOT_PASSWORD=P@ssword1
 MYSQL_USER_PASSWORD=P@ssword1
+INNODB_BUFFER_POOL_SIZE=100M # this should be increased if you have studies with >1000 patients and CNV data
 
 # PostgreSQL configuration for FHIR Database
 POSTGRES_USER_PASSWORD=P@ssword2
@@ -23,7 +24,7 @@ ENABLE_QUICKSEARCH=true
 
 # Authentication configuration
 LOGINREQUIRED=false
-AUTHENTICATE=noauthsessionservice #either noauthsessionservice oder saml
+AUTHENTICATE=false #either false oder saml
 # generate keystore using: keytool -genkey -alias secure-key -keyalg RSA -keystore samlKeystore.jks
 #KEYSTORE_KEY=secure-key
 #KEYSTORE_PASSWORD=somepassword
