--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -14,7 +14,7 @@ services:
      - ./config/portal.properties:/cbioportal/application.properties:Z
      - ./config/client-tailored-saml-idp-metadata.xml:/cbioportal-webapp/WEB-INF/classes/client-tailored-saml-idp-metadata.xml:Z
      - ./config/samlKeystore.jks:/cbioportal-webapp/WEB-INF/classes/samlKeystore.jks:Z
-     - ./config/${LOGO:-miracum.png}:/cbioportal-webapp/images/${LOGO:-pm4onco.png}:Z
+     - ./config/${LOGO:-pm4onco.png}:/cbioportal-webapp/images/${LOGO:-pm4onco.png}:Z
      - cbioportal_portalinfo:/cbioportal/portalinfo:z
     depends_on:
      - cbioportal_database
@@ -47,7 +47,7 @@ services:
       "-Dsaml.custom.userservice.class=org.cbioportal.security.spring.authentication.keycloak.SAMLUserDetailsServiceImpl",
       "-Dhttps.proxyHost=${HTTPS_PROXY_HOST}",
       "-Dhttps.proxyPort=${HTTPS_PROXY_PORT}",
-      "-Dskin.right_logo=${LOGO:-miracum.png}",
+      "-Dskin.right_logo=${LOGO:-pm4onco.png}",
       "-cp",
       "/cbioportal-webapp:/cbioportal-webapp/lib/*",
       "org.cbioportal.PortalApplication",
